--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,29 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/8.3.1/firebase-analytics.js"></script>
+
+  <script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyAOBWCmjna_l7lUdt5HzKUoFLIy1cydRbA",
+      authDomain: "itsxyzmovies.firebaseapp.com",
+      projectId: "itsxyzmovies",
+      storageBucket: "itsxyzmovies.appspot.com",
+      messagingSenderId: "739130652437",
+      appId: "1:739130652437:web:c07934ae0fa6d8dadb5b1c",
+      measurementId: "G-C9D736R3T1"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+</script>
   </body>
 </html>
